<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movies</string>
    <string name="version">Version</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="update_available">Update available</string>
    <string name="download">Download</string>
    <string name="movies_update">App Update</string>
    <string name="installed_version">Installed Version:</string>
    <string name="newest_version">Newest Version:</string>
    <string name="update">Update</string>
    <string name="app_info">App Info</string>
    <string name="developer">Developer</string>
    <string name="movie_information">Movie Information</string>
    <string name="cloud_storage">Cloud Storage</string>
    <string name="settings">Settings</string>
    <string name="video_info">Video Info</string>
    <string name="resolution">Resolution</string>
    <string name="title">Title</string>
    <string name="language">Language</string>
    <string name="subtitle">Subtitles</string>
    <string name="duration">Duration</string>
    <string name="size">Size</string>
    <string name="format">Format</string>
    <string name="close">Close</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_info">Movie Info</string>
    <string name="update_app">Update App</string>
    <string name="cancel">Cancel</string>
    <string name="newest_version_n_a">Newest Version: N/A</string>
    <string name="installed_version_n_a">Installed Version: N/A</string>
    <string name="filter">Filter</string>
    <string name="version_n_a">Version: N/A</string>
    <string name="theme">Dark Mode</string>
    <string name="system">System</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="restart_app">Apply Changes</string>
    <string name="restart_app_to_apply_changes">Close App to apply changes?</string>
    <string name="layout">Layout</string>
    <string name="useless">Useless</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="no_EasterEgg">No EasterEgg here, get lost</string>
    <string name="easteregg_found">EasterEgg found 🙃</string>
    <string name="alert_bar_text" translatable="false">Alert Bar Text</string>
    <string name="alternative_results">Alternative Results</string>
    <string name="no_information">No Information</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="wifi" translatable="false">Wifi</string>
    <string name="offline">Offline</string>
    <string name="Filter_currently_not_available">Filter currently not available</string>
    <string name="Search_currently_not_available">Search currently not available</string>
    <string name="Search_not_available">Search not available</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="Baguette" translatable="false">Baguette!!!</string>
    <string name="yanndroid" translatable="false">Yanndroid</string>
    <string name="tmdb" translatable="false">TMDb</string>
    <string name="firebase" translatable="false">Firebase</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="trailer">Trailer</string>
    <string name="no_trailer">No Trailer</string>
    <string name="watch">Watch</string>
    <string name="russian">Russian</string>
    <string name="all">All</string>
    <string name="data_saving">Data Saving</string>
    <string name="server">Server</string>
    <string name="don_t_load_covers_in_list">Don\'t load covers in list</string>
    <string name="use_a_local_server_for_streaming">Use a local Server for streaming</string>
    <string name="local_server">Local server</string>
    <string name="ex_192_168_4_44">ex: 192.168.4.44</string>
    <string name="ip_or_hostname">IP or Hostname</string>
    <string name="username">Username</string>
    <string name="ex_yanndroid">ex: yanndroid</string>
    <string name="password">Password</string>
    <string name="default_tab">Tab</string>
    <string name="please_wait_and_retry">Please wait until the covers have loaded in the list and retry</string>
    <string name="changelog" translatable="false">Changelog</string>
    <string name="no_changelog" translatable="false">No Changelog</string>
    <string name="design_inspiration">Design inspiration</string>
    <string name="samsung" translatable="false">Samsung</string>
    <string name="more">More</string>
    <string name="closed" translatable="false">closed</string>
    <string name="opend" translatable="false">opend</string>
    <string name="lottie_animations">Lottie animations</string>
    <string name="lottiefiles" translatable="false">LottieFiles</string>

</resources>