<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:orientation="vertical"
        android:paddingVertical="5dp"
        android:paddingHorizontal="25dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/update_app"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nver"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:text="@string/newest_version_n_a"
            android:textSize="15dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cver"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:text="@string/installed_version_n_a"
            android:textSize="15dp"
            />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                android:id="@+id/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textStyle="bold"
                app:rippleColor="@color/button_ripple_color" />

            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                android:id="@+id/update"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textStyle="bold"
                app:rippleColor="@color/button_ripple_color" />



        </LinearLayout>
    </LinearLayout>
</LinearLayout>