<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="24dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/drawer_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="fitCenter"
            app:lottie_autoPlay="true"
            app:lottie_fileName="drawer_movie.json"
            app:lottie_loop="true" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/movies"
            android:textSize="30dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_appinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/rounded_corner"
        android:foregroundTint="@color/switch_card_background_off"
        android:gravity="center_vertical|left"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info" />

        <com.google.android.material.textview.MaterialTextView
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/app_info"
            android:textSize="18dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/drawer_videoinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/rounded_corner"
        android:foregroundTint="@color/switch_card_background_off"
        android:gravity="center_vertical|left"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_movie" />

        <com.google.android.material.textview.MaterialTextView
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/video_info"
            android:textSize="18dp" />
    </LinearLayout>


</LinearLayout>