<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="@drawable/rounded_corner_bottom"
    tools:context=".AppInfoActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:windowBackground"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll|snap"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/expanded_title"
                    style="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/app_info"
                    android:textSize="40sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/expanded_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-5dp"
                    android:gravity="center"
                    android:text="@string/version_n_a"
                    android:textSize="20dp" />

            </LinearLayout>


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/app_info" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/rounded_corner_top"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/developer"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/yanndroidcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="185.04dp"
                            android:layout_height="133.4dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_yanndroid" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                style="?android:attr/textAppearanceLarge"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical|left"
                                android:text="Yanndroid" />

                            <ImageView
                                android:id="@+id/ytelegram"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_telegram" />

                            <ImageView
                                android:id="@+id/ygithub"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="24dp"
                                android:src="@drawable/ic_github" />

                        </LinearLayout>


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/movie_information"
                    android:textStyle="bold"

                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tmdbcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="185.04dp"
                            android:layout_height="133.4dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:paddingHorizontal="5dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_tmdb_big" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                style="?android:attr/textAppearanceLarge"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical|left"
                                android:text="TMDb" />

                            <ImageView
                                android:id="@+id/tbrowser"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="24dp"
                                android:src="@drawable/ic_samsung_internet" />

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cloud_storage"
                    android:textStyle="bold"

                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/fbcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="185.04dp"
                            android:layout_height="133.4dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_firebase" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                style="?android:attr/textAppearanceLarge"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical|left"
                                android:text="Firebase" />

                            <ImageView
                                android:id="@+id/fbrowser"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="24dp"
                                android:src="@drawable/ic_samsung_internet" />

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>